controller updated and version added
